fix that searchable select input doesn't overflow the arrow

--- a/app/assets/stylesheets/zammad.css.scss
+++ b/app/assets/stylesheets/zammad.css.scss
@@ -5513,6 +5513,10 @@ output {
 .searchableSelect {
   position: relative;
   
+  .form-control {
+    padding-right: 37px;
+  }
+  
   .searchableSelect-shadow {
     display: none;
   }
